--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 			</div>
 
 			<div class="menu">
-				<div class="top__logo"><img src="./source/logo-white.svg" alt="logotype"></div>
+				<div class="menu__wrapper">
+					<div class="top__logo"><img src="./source/logo-white.svg" alt="logotype"></div>
 				<nav class="menu__nav">
 					<ul class="menu__nav-list">
 						<li class="menu__nav-item"><a href="#" class="menu__nav-item_link">About</a></li>
@@ -55,6 +56,7 @@
 						<li class="menu__nav-item"><a href="#" class="menu__nav-item_link">Contacts</a></li>
 					</ul>
 				</nav>
+				</div>
 			</div>
 
 		</div>
@@ -75,6 +77,7 @@
 		</div>
 	</main>
 	<footer class="footer"></footer>
-</body>
+	<script src="./js/script.js"></script>
+	</body>
 
 </html>
